--- a/api/src/main/res/xml/accountauthenticator.xml
+++ b/api/src/main/res/xml/accountauthenticator.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="@string/account_type"
+    android:accountType="com.sad.assistant.live.guardian"
     android:icon="@drawable/c_buoycircle_icon_normal"
     android:label="@string/app_name" />
