--- a/api/src/main/res/xml/sync_adapter.xml
+++ b/api/src/main/res/xml/sync_adapter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
     android:accountType="com.sad.assistant.live.guardian"
-    android:contentAuthority="${applicationId}.provider"
+    android:contentAuthority="com.sad.assistant.live.guardian.api.provider"
     android:allowParallelSyncs="false"
     android:isAlwaysSyncable="true"
     android:userVisible="false"/>
